Fix build break when building with enable_openvr=true on Windows

BUG=730436

Review-Url: https://codereview.chromium.org/2929733002
Cr-Commit-Position: refs/heads/master@{#477907}

Former-commit-id: d607aacd7fd54bab7abeef5b20eea1f4bf26e674